--- a/demo/res/values/strings.xml
+++ b/demo/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
 
     <string name="app_name">StaggeredGridView</string>
-
+    <string name="loading_more">Loading more images..</string>
+	
 </resources>
